--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
       content="System for management of the clock-in records of collaborators in a company"
     />
     <title>Register - Access Control</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
